--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,13 @@
   "description": "An advanced, but easy-to-use Remote Desktop Application Program which has cross-platform support",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "electron-builder"
   },
-  "repository": "",
+  "repository": "https://github.com/DinoscapeProgramming/Remote-Control",
   "keywords": [],
   "author": "Dinoscape",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "@jitsi/robotjs": "^0.6.13",
     "dotenv": "^16.4.5",
