--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "Remote Control Package",
   "version": "1.0.4",
   "description": "An advanced, but easy-to-use Remote Desktop Application Program which has cross-platform support",
-  "main": "index.js",
+  "main": "package.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
