--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "https://github.com/DinoscapeProgramming/Remote-Control",
-  "keywords": [],
+  "keywords": ["remote-control", "remote-desktop", "electron"],
   "author": "DinoscapeProgramming",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "bin": {
+    "buildInstallable": "bin/buildInstallable.js",
+    "openInstallable": "bin/openInstallable.js",
+    "hostServer": "bin/hostServer.js"
+  }
 }
