--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
   "name": "electron-remote-control",
   "productName": "Remote Control Package",
-  "version": "1.1.47",
+  "version": "1.1.52",
   "description": "An advanced, but easy-to-use Remote Desktop Application Program which has cross-platform support",
   "main": "package.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "t": "echo \"Error: no test specified\" && exit 1",
     "buildInstallable": "node scripts/executeScript.js --buildInstallable",
+    "bi": "node scripts/executeScript.js --buildInstallable",
     "openInstallable": "node scripts/executeScript.js --openInstallable",
+    "oi": "node scripts/executeScript.js --openInstallable",
     "hostServer": "node scripts/executeScript.js --hostServer",
+    "hs": "node scripts/executeScript.js --hostServer",
     "developerBuild": "node scripts/executeScript.js --developerBuild",
-    "repeatPublish": "node scripts/executeScript.js --repeatPublish"
+    "db": "node scripts/executeScript.js --developerBuild",
+    "repeatPublish": "node scripts/executeScript.js --repeatPublish",
+    "rp": "node scripts/executeScript.js --repeatPublish"
   },
   "repository": "https://github.com/DinoscapeProgramming/Remote-Control",
   "homepage": "https://remote-control-cnp2.onrender.com",
-  "keywords": ["remote-control", "remote-desktop", "electron"],
+  "keywords": [
+    "remote-control",
+    "remote-desktop",
+    "electron"
+  ],
   "author": "DinoscapeProgramming",
   "license": "Apache-2.0",
   "bin": {
