Configured output path for PDFCreator on win32; Error handling fixes; Updated package.json of client

--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,11 @@
     "build": "electron-builder"
   },
   "repository": "https://github.com/DinoscapeProgramming/Remote-Control",
-  "keywords": ["remote-control", "remote-desktop", "electron"],
+  "keywords": [
+    "remote-control",
+    "remote-desktop",
+    "electron"
+  ],
   "author": "DinoscapeProgramming",
   "license": "Apache-2.0",
   "dependencies": {
