Added move project method to package; Added move project script; Added move project bin script; Bug fix; Added index.js to gitignore (so developers can keep their original index.js file from being published when using the npm package); Updated readme file; Updated root directory bin scripts; Added test bin scripts; Updated build bin script of client; Added host bin script; Changed npm package version

--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,8 @@
   "author": "DinoscapeProgramming",
   "license": "Apache-2.0",
   "bin": {
+    "test": "bin/test.js",
+    "t": "bin/test.js",
     "build": "bin/build.js",
     "b": "bin/build.js"
   },
