--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "crossnote": "^0.9.9",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-documentation": "^1.0.52",
