--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "express": "^4.19.2",
     "express-documentation": "^1.0.52",
     "express-rate-limit": "^7.2.0",
+    "nodemailer": "^6.9.15",
     "peer": "^0.6.1",
     "socket.io": "^4.7.4"
   }
