Added meta description tags; Updated Express Docs; Cleared out grammatical mistakes and spelling errors; Changed npm package version

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "remote-control-client",
   "productName": "Remote Control",
   "version": "1.0.0",
-  "description": "An advanced, but easy-to-use Remote Desktop Application Program which has cross-platform support",
+  "description": "An advanced but easy-to-use remote desktop application with cross-platform support",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
