--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "remote-control-server",
   "productName": "Remote Control Server",
   "version": "1.0.0",
-  "description": "An advanced but easy-to-use remote desktop application program with cross-platform support",
+  "description": "An advanced but easy-to-use remote desktop application with cross-platform support",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
