--- a/.github/workflows/repeatPublish.yml
+++ b/.github/workflows/repeatPublish.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: '22.11.0'
 
       - name: Repeat publish 5 versions
-        run: npm run rp -- --amount=5
+        run: npm -- run rp -- --amount=5
 
       - name: Calculate and display duration
         run: |
