--- a/.github/workflows/repeatPublish.yml
+++ b/.github/workflows/repeatPublish.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           node-version: '22.11.0'
 
+      - name: Authenticate with npm
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+
       - name: Repeat publish 5 versions
         run: npm -- run rp -- --amount=5
 
