--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "crossnote": "^0.9.9",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
+    "electron-remote-control": "^1.1.6086",
     "express": "^4.19.2",
     "express-documentation": "^1.0.79",
     "express-rate-limit": "^7.2.0",
