--- a/client/package.json
+++ b/client/package.json
@@ -37,8 +37,7 @@
   "dependencies": {
     "@jitsi/robotjs": "^0.6.13",
     "dotenv": "^16.4.5",
-    "socket.io-client": "^4.7.4",
-    "update-electron-app": "^3.0.0"
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "electron": "^28.2.3",
