--- a/tinyControlClient/package.json
+++ b/tinyControlClient/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@jitsi/robotjs": "^0.6.13",
+    "canvas": "^3.1.0",
     "express": "^4.21.2",
+    "peerjs": "^1.5.4",
     "socket.io-client": "^4.8.1"
   }
 }
