--- a/tinyControlClient/package.json
+++ b/tinyControlClient/package.json
@@ -11,11 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@its-forked/peerjs-on-node": "^1.0.3",
     "@jitsi/robotjs": "^0.6.13",
-    "canvas": "^3.1.0",
     "electron-webrtc": "^0.3.0",
     "express": "^4.21.2",
-    "peerjs": "^1.5.4",
+    "peerjs": "^0.3.18",
     "socket.io-client": "^4.8.1",
     "ws": "^8.18.0",
     "xmlhttprequest": "^1.8.0"
